// I want to define here RuntimeResponse message which will be oneOf many other types of messages
// For example:
// - InfoResponse
// - PackagesResponse

syntax = "proto3";

package grpcagent;

message CommandRequest {
  string requestId = 1;
  uint32 version = 2;
  string id = 3;
  string command = 4;
}

message CommandResponse {
  string error_message = 1;
}
