// I want to define here RuntimeResponse message which will be oneOf many other types of messages
// For example:
// - InfoResponse
// - PackagesResponse

syntax = "proto3";

package grpcagent;

message RuntimeRequest {
  string requestId = 1;
  uint32 version = 2;
  string id = 3;
  string command = 4;
}

message RuntimeResponse {
  oneof response_type {
    InfoResponse info_response = 1;
    PackagesResponse metrics_response = 2;
    // Add other message types here...
  }
}

message Time {
  uint64 seconds = 1;
  uint32 nanoseconds = 2;
}

message CommonResponse {
  string agentId = 1;
  string requestId = 2;
  string command = 3;
  Time recorded = 4;
  uint32 duration = 5;
  uint32 interval = 6;
  uint32 version = 7;
  int64 time = 8;
  string timeNS = 9;
}

message InfoBody {
  string app = 1;
  string arch = 2;
  uint32 cpuCores = 3;
  string cpuModel = 4;
  string execPath = 5;
  string hostname = 6;
  string id = 7;
  string main = 8;
  string nodeEnv = 9;
  uint32 pid = 10;
  string platform = 11;
  uint64 processStart = 12;
  repeated string tags = 13;
  uint64 totalMem = 14;
  map<string, string> versions = 15;
}

message InfoResponse {
  CommonResponse common = 1;
  InfoBody body = 2;
}

message PackagesResponse {
  CommonResponse common = 1;
  PackagesBody body = 2;
}

message PackagesBody {
  repeated Package packages = 1;
}

message Package {
  string path = 1;
  string name = 2;
  string version = 3;
  string main = 4;
  repeated string dependencies = 5;
  bool required = 6;
}