syntax = "proto3";

import "common.proto";

package grpcagent;

message ReconfigureBody {
  uint32 blockedLoopThreshold = 1;
  uint32 interval = 2;
  bool pauseMetrics = 3;
  bool promiseTracking = 4;
  bool redactSnapshots = 5;
  string statsd = 6;
  string statsdBucket = 7;
  string statsdTags = 8;
  repeated string tags = 9;
  bool tracingEnabled = 10;
  uint32 tracingModulesBlacklist = 11;
}

message ReconfigureEvent {
  CommonResponse common = 1;
  ReconfigureBody body = 2;
}
